[project]
name = "ht802v2-mcp"
version = "0.1.0"
description = "MCP server for Grandstream HT802 V2 analog telephone adapters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastmcp>=3.1.1",
]

[project.scripts]
ht802v2-mcp = "ht802v2_mcp.__main__:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ht802v2_mcp"]

[dependency-groups]
dev = [

    "ruff>=0.15.7",
    "tox>=4.50.3",
    "tox-ini-fmt>=1.7.1",
    "tox-uv>=1.33.4",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]
